--- a/style.css
+++ b/style.css
@@ -10,12 +10,21 @@ body {
   align-items: center;
   height: 100vh;
 }
-
+header{
+  position: absolute;
+  display: flex;
+  align-self: flex-start;
+  margin-top: 20px;
+  font-size: 1.5rem;
+  margin-bottom: 50px;
+  color: #a8dadc;
+  background-color: #457b9d;
+}
 /* Cartas */
 
 .card {
-  width: 130px;
-  height: 150px;
+  width: 100px;
+  height: 120px;
   position: relative;
   transform-style: preserve-3d;
   transition: transform 0.6s;
@@ -89,9 +98,40 @@ body {
 
 #tabuleiro {
   display: grid;
-
   max-width: 800px;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 20px;
+  margin: 20px;
+}
+footer {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  margin-top: 20px;
+  background-color: #272624;
+  width: 100%;
+  height: 90px;
+  position: fixed;
+  bottom: 0px;
+
+}
+#footerimg {
+  width: 60px;
+}
+#footerimg:hover {
+  width: 70px;
+}
+#footertext {
+  color: white;
+  font-family: "Inconsolata", monospace;
+}
+#gridFt {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+  gap: -10px;
+  width: 370px;
 }
